force-app/main/default/objects/Account/fields/Closing_status__c.field-meta.xml
<CustomField>
    <fullName>Closing_status__c</fullName>
    <label>Closing status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>