force-app/main/default/objects/Account/fields/Communication_Events__c.field-meta.xml
<CustomField>
    <fullName>Communication_Events__c</fullName>
    <label>Communication Events</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Recruitment - Opportunity Fair</fullName>
            </value>
            <value>
                <fullName>Recruitment - Classroom Visit</fullName>
            </value>
            <value>
                <fullName>Panel Discussion</fullName>
            </value>
            <value>
                <fullName>DPI Classroom Visit</fullName>
            </value>
            <value>
                <fullName>Internal DPI Speaker</fullName>
            </value>
            <value>
                <fullName>External Speaker</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>