force-app/main/default/objects/Account/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orgs</relationshipLabel>
    <relationshipName>Orgs</relationshipName>
    <type>Lookup</type>
</CustomField>