force-app/main/default/objects/Account/fields/DPI_Owner__c.field-meta.xml
<CustomField>
    <fullName>DPI_Owner__c</fullName>
    <label>DPI Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>