force-app/main/default/objects/Account/fields/Journey_Stage__c.field-meta.xml
<CustomField>
    <fullName>Journey_Stage__c</fullName>
    <label>Journey Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Intros and Warm-Up</fullName>
            </value>
            <value>
                <fullName>Harbor Cruise</fullName>
            </value>
            <value>
                <fullName>Sent Marketing Materials</fullName>
            </value>
            <value>
                <fullName>Internal Company Champion Identified</fullName>
            </value>
            <value>
                <fullName>Guest Speak</fullName>
            </value>
            <value>
                <fullName>Consensus Reached</fullName>
            </value>
            <value>
                <fullName>Signed Agreement</fullName>
            </value>
            <value>
                <fullName>Re-try Later</fullName>
            </value>
            <value>
                <fullName>Prospecting Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>