force-app/main/default/objects/Account/fields/Lead_DPI_Staff__c.field-meta.xml
<CustomField>
    <fullName>Lead_DPI_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead DPI Staff</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orgs (Lead DPI Staff)</relationshipLabel>
    <relationshipName>Orgs1</relationshipName>
    <type>Lookup</type>
</CustomField>