force-app/main/default/objects/Account/fields/Needs__c.field-meta.xml
<CustomField>
    <fullName>Needs__c</fullName>
    <label>Needs</label>
    <length>40</length>
    <type>Text</type>
</CustomField>