force-app/main/default/objects/Account/fields/Next_steps__c.field-meta.xml
<CustomField>
    <fullName>Next_steps__c</fullName>
    <label>Next steps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Will find + share the right contact</fullName>
            </value>
            <value>
                <fullName>Not interested, not a good fit</fullName>
            </value>
            <value>
                <fullName>Revisit later + date</fullName>
            </value>
            <value>
                <fullName>Pitching internally, will re-connect after</fullName>
            </value>
            <value>
                <fullName>Loop-in + pitch to others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>