force-app/main/default/objects/Account/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number of open roles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>