force-app/main/default/objects/Account/fields/Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Type__c</fullName>
    <label>Partnership Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employer for Immersion individual hires</fullName>
            </value>
            <value>
                <fullName>Employer for Immersion project team</fullName>
            </value>
            <value>
                <fullName>Employer for Workforce individual hires</fullName>
            </value>
            <value>
                <fullName>Employer for Workforce project team</fullName>
            </value>
            <value>
                <fullName>Workforce student pipeline</fullName>
            </value>
            <value>
                <fullName>Immersion student pipeline</fullName>
            </value>
            <value>
                <fullName>Community Ed recruitment pipeline</fullName>
            </value>
            <value>
                <fullName>Partner in securing employers</fullName>
            </value>
            <value>
                <fullName>Grant funding</fullName>
            </value>
            <value>
                <fullName>Speaker engagement</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Program Logistics</fullName>
            </value>
            <value>
                <fullName>Mentor pipeline</fullName>
            </value>
            <value>
                <fullName>Near-peer mentor pipeline</fullName>
            </value>
            <value>
                <fullName>DPI students attend(ed) this school</fullName>
            </value>
            <value>
                <fullName>TBD – other from other departments</fullName>
            </value>
            <value>
                <fullName>Revenue / Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>