force-app/main/default/objects/Account/fields/Projected_close_date__c.field-meta.xml
<CustomField>
    <fullName>Projected_close_date__c</fullName>
    <label>Projected close date</label>
    <type>Date</type>
</CustomField>