force-app/main/default/objects/Account/fields/Role_locations__c.field-meta.xml
<CustomField>
    <fullName>Role_locations__c</fullName>
    <label>Role locations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Hybrid, must live locally</fullName>
            </value>
            <value>
                <fullName>Hybrid, can live anywhere</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>IL</fullName>
            </value>
            <value>
                <fullName>Other state (fill-in)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>