force-app/main/default/objects/Account/fields/Scholarship_Offered__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scholarship Offered?</label>
    <type>Checkbox</type>
</CustomField>