force-app/main/default/objects/Account/fields/School_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>School_Type_Other__c</fullName>
    <label>School Type Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>