force-app/main/default/objects/Account/fields/Tech_roles_needed__c.field-meta.xml
<CustomField>
    <fullName>Tech_roles_needed__c</fullName>
    <label>Tech roles needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software developers</fullName>
            </value>
            <value>
                <fullName>Data analysts</fullName>
            </value>
            <value>
                <fullName>QA automation engineers</fullName>
            </value>
            <value>
                <fullName>Cyber security</fullName>
            </value>
            <value>
                <fullName>Data science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>