force-app/main/default/objects/Account/fields/Total_Funding_to_DPI__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding_to_DPI__c</fullName>
    <label>Total Funding to DPI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>