force-app/main/default/objects/Account/fields/Why_are_they_interested__c.field-meta.xml
<CustomField>
    <fullName>Why_are_they_interested__c</fullName>
    <label>Why are they interested?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEI</fullName>
            </value>
            <value>
                <fullName>Short-staffed, need open roles filled</fullName>
            </value>
            <value>
                <fullName>Fill long-term staff needs</fullName>
            </value>
            <value>
                <fullName>Have a project need</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>